--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "weather-icon-font",
+  "name": "getmeteome-icon-font",
   "version": "1.0.1",
   "description": "Weather composite icon font for the site Getmeteo.me",
   "author": "Nazar Mozol",
-  "license": "MIT License (https://raw.githubusercontent.com/acruxray/weather-icon-font/master/LICENSE)",
-  "repository": "https://github.com/acruxray/weather-icon-font",
-  "homepage": "https://acruxray.github.io/weather-icon-font",
+  "license": "MIT License (https://raw.githubusercontent.com/acruxray/getmeteome-icon-font/master/LICENSE)",
+  "repository": "https://github.com/acruxray/getmeteome-icon-font",
+  "homepage": "https://acruxray.github.io/getmeteome-icon-font",
   "devDependencies": {
     "grunt": "^1.0.1",
     "grunt-banner": "^0.6.0",
